--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/girl.ico">
+  <meta name="description" content="Resume about myself and educational career.">
+  <meta name="author" content="862448768">
 
-  <title>John Doe - Business Administration</title>
+  <title>Melany Villalta - Digital Marketing</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">John Doe</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/melanyvillalta.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,29 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Melany Villalta
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Digital Marketer 🖥️</div>
+        <p class="lead mb-4">I am a current UCR freshman student, hoping to switch to a pre-business major and concentrate in marketing. My goal is to be in digital marketing after graduating in 2027. Marketing, advertising, and the psychology of marketing/business interests me, hence, getting a career centered in one of those things would be a dream. I went to John Marshall High School and there I joined Link Crew and the Student Advisory Board at the Health Center. These clubs helped me step out of my comfort zone when it came to speaking to others in a public setting. Communicating eloquently when informing and expressing ideas is an important characteristic a person should have when striving to be in the business industry. Just as I stepped out of my comfort zone in High School, I want to step out of my comfort at UCR. I want to learn how to communicate at a professional level, publicly speak with ease, and ultimately become more of an extrovert. 
+<br><br>
 
-        Enter bio here<br><br>
+        What sparked my interest in business and marketing was seeing how my dad carried about his business. Having to provide for our family, endlessly trying to make ends meet, drove him to start a business and sell his service of carpet cleaning. I’ve seen the struggle and difficulties of running a business. He’s unknowingly been teaching me the ends and outs of a business, from customer service to negotiating prices. My dad has always strived to learn more about running businesses and has recently been able to expand his professionalism by creating social media platforms. What has recently captured his interest, and my attention, is advertising his business on social media by publishing Ads to the right audience for more clients. He unintentionally introduced me to the world of digital marketing and my attention was captured. There is so much to learn about when it comes to advertising and the processes behind reaching the right audience. Small businesses have grown because of their marketing teams. To be part of a marketing team for a brand and experience the behind the scenes of how a product or service is being launched would be a memorable experience. 
+<br><br>
 
-        Enter bio here
+       My overall goal at UCR is to expand my horizons and learn as much as I can about my major. I hope to make lots of connections and push myself to be the best of who I can be. Along the way I could be introduced to other professions or classes and maybe even minoring in something else I find interesting other than business or marketing. I want to learn more and take advantage of the opportunities at UCR, but it all starts with my initiative. Joining clubs, doing research, and talking with my advisor is the first step into getting outside of the box I’ve slowly placed myself in. Making more friends, talking to others about what they know and what they plan to do with their degree, and chatting with professors for more ideas and insight are other ways for me to step out of my comfort zone. Although, digital marketing is one aspect of marketing that I would like to learn more about, I would also like to get to know more about the other career paths of a marketing concentration. I am also open minded about other business concentrations and the other careers I’ve yet to know about. 
+
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="www.linkedin.com/in/melany-villalta-99b85a304">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/mvill302">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://youtu.be/WUniTVTi_Jk">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:mvill302@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +95,50 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Club</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Link Crew</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Helped incoming freshmen highschoolers adapt to the high school life<br> 
+              • Led and ran freshmen advisories - giving presentations about responsibilites of a high schooler and leading interactive bonding activites with the students<br>
+              • Gained leading experience and ability to lead a classroom<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">November 2021 - May 23</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Volunteer</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">APHCV Clinic</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Part of the student board advisory at my high school clinic<br>
+              • Responsible for organizing out reaches to inform students about the health clinics services<br>
+              • Organized events hosted by the clinic <br>
+              • Learned team work building and leadership skills <br> 
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">November 2021 - May 2023</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Volunteer as Accountant Assistant</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">TGIS Catering Company</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Helped Accountant with phone calls and filing <br>
+            • Organized receipts/paper work<br>
+            • Made invoices for paid bills<br>
+            • Gained insight of the office life<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">June 2021- August 2021</span>
           </div>
         </div>
 
@@ -151,37 +156,26 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <h3 class="mb-0">High School</h3>
+            <div class="subheading mb-3">John Marshall High School</div>
+            <div>Graduated with Honors and Seal of Biliteracy</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2019 - June 2023</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <div class="subheading mb-3">Business Major</div>
+            <div>Graduating class of 2027</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">September 2023 - May 2027 </span>
           </div>
         </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
-
+        
       </div>
     </section>
 
@@ -191,7 +185,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/picture1.png" width="500px">
+    <img src="img/picture2.png" width="500px"><br>
+    <img src="img/picture3.png" width="500px">
+    <img src="img/picture4.png" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +196,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Melany Villalta</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
